--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         </activity>
         <activity android:name=".UploadActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity
+            android:name=".EventOpenActivity"
+            android:label="@string/title_activity_event_open"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
