--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UploadActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name="insert.UploadActivity" />
+        <activity android:name="authentication.LoginActivity" />
+        <activity android:name="authentication.RegisterActivity" />
         <activity
             android:name=".EventOpenActivity"
             android:label="@string/title_activity_event_open"
@@ -28,7 +28,7 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".InsertActivity"></activity>
+        <activity android:name="insert.InsertActivity"></activity>
     </application>
 
 </manifest>
